zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/switch_capture_packed_union_tag.zig
const P = packed union(u8) {
    a: u8,
    b: i8,
};

export fn foo(p: P) void {
    switch (p) {
        .{ .a = 123 } => |_, tag| _ = tag,
        else => {},
    }
}

// error
//
// :8:30: error: cannot capture tag of packed union
